--- a/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
+++ b/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
@@ -30,7 +30,7 @@ wso2.carbon:
 databridge.config:
   # No of worker threads to consume events
   # THIS IS A MANDATORY FIELD
-  workerThreads: <%= @databridge_worker_threads %>
+  workerThreads: <%= @databridge_config_worker_threads %>
       # Maximum amount of messages that can be queued internally in MB
   # THIS IS A MANDATORY FIELD
   maxEventBufferCapacity: 10000000
@@ -39,10 +39,10 @@ databridge.config:
   eventBufferSize: 2000
       # Keystore file path
   # THIS IS A MANDATORY FIELD
-  keyStoreLocation : <%= @databridge_keystore %>
+  keyStoreLocation : <%= @databridge_config_keystore_location %>
   # Keystore password
   # THIS IS A MANDATORY FIELD
-  keyStorePassword : <%= @databridge_keystore_password %>
+  keyStorePassword : <%= @databridge_config_keystore_password %>
   # Session Timeout value in mins
   # THIS IS A MANDATORY FIELD
   clientTimeoutMin: 30
@@ -72,7 +72,7 @@ databridge.config:
           sslPort: '<%= @binary_data_receiver_ssl_port %>'
           tcpReceiverThreadPoolSize: '100'
           sslReceiverThreadPoolSize: '100'
-          hostName: <%= @binary_data_receiver_hostname %>
+          hostName: <%= @hostname %>
 
   # Configuration of the Data Agents - to publish events through databridge
 data.agent.config:
@@ -91,9 +91,9 @@ data.agent.config:
         # Data publisher strategy
         publishingStrategy: async
         # Trust store path
-        trustStorePath: '<%= @thrift_agent_trust_store %>'
+        trustStorePath: '<%= @analytics_trust_store_location %>'
         # Trust store password
-        trustStorePassword: '<%= @thrift_agent_trust_store_password %>'
+        trustStorePassword: '<%= @trust_store_password %>'
         # Queue Size
         queueSize: 32768
         # Batch Size
@@ -140,9 +140,9 @@ data.agent.config:
         # Data publisher strategy
         publishingStrategy: async
         # Trust store path
-        trustStorePath: '<%= @binary_agent_trust_store %>'
+        trustStorePath: '<%= @analytics_trust_store_location %>'
         # Trust store password
-        trustStorePassword: '<%= @binary_agent_trust_store_password %>'
+        trustStorePassword: '<%= @trust_store_password %>'
         # Queue Size
         queueSize: 32768
         # Batch Size
@@ -188,7 +188,7 @@ state.persistence:
   enabled: false
   intervalInMin: 1
   revisionsToKeep: 2
-  persistenceStore: org.wso2.carbon.stream.processor.core.persistence.FileSystemPersistenceStore
+  persistenceStore: org.wso2.carbon.streaming.integrator.core.persistence.FileSystemPersistenceStore
   config:
     location: siddhi-app-persistence
 
@@ -197,13 +197,13 @@ wso2.securevault:
   secretRepository:
     type: org.wso2.carbon.secvault.repository.DefaultSecretRepository
     parameters:
-      privateKeyAlias: <%= @securevault_private_key_alias %>
-      keystoreLocation: <%= @securevault_key_store %>
+      privateKeyAlias: <%= @securevault_privatekey_alias %>
+      keystoreLocation: <%= @securevault_keystore_location %>
       secretPropertiesFile: <%= @securevault_secret_properties_file %>
   masterKeyReader:
     type: org.wso2.carbon.secvault.reader.DefaultMasterKeyReader
     parameters:
-      masterKeyReaderFile: <%= @securevault_master_key_reader_file %>
+      masterKeyReaderFile: <%= @securevault_masterkeyreader_file %>
 
 
 # Data Sources Configuration
@@ -241,43 +241,7 @@ wso2.datasources:
           driverClassName: <%= @business_rules_db_driver %>
           maxPoolSize: 20
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
-          validationTimeout: 30000
-          isAutoCommit: false
-    - name: SAMPLE_DB
-      description: Sample datasource used for gadgets generation wizard
-      jndiConfig:
-        name: jdbc/SAMPLE_DB
-        useJndiReference: true
-      definition:
-        type: RDBMS
-        configuration:
-          jdbcUrl: 'jdbc:h2:${sys:carbon.home}/wso2/${sys:wso2.runtime}/database/SAMPLE_DB;IFEXISTS=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000;MVCC=TRUE'
-          username: wso2carbon
-          password: wso2carbon
-          driverClassName: org.h2.Driver
-          maxPoolSize: 10
-          idleTimeout: 60000
-          connectionTestQuery: SELECT 1
-          validationTimeout: 30000
-          isAutoCommit: false
-
-    # Dashboard data source
-    - name: WSO2_STATUS_DASHBOARD_DB
-      description: The datasource used for dashboard feature
-      jndiConfig:
-        name: jdbc/wso2_status_dashboard
-        useJndiReference: true
-      definition:
-        type: RDBMS
-        configuration:
-          jdbcUrl: '<%= @status_dashboard_db_url %>'
-          username: <%= @status_dashboard_db_username %>
-          password: <%= @status_dashboard_db_password %>
-          driverClassName: <%= @status_dashboard_db_driver %>
-          maxPoolSize: 20
-          idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @business_rules_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -289,10 +253,10 @@ wso2.datasources:
       definition:
         type: RDBMS
         configuration:
-          jdbcUrl: '<%= @metrics_db_url %>'
-          username: <%= @metrics_db_username %>
-          password: <%= @metrics_db_password %>
-          driverClassName: <%= @metrics_db_driver %>
+          jdbcUrl: 'jdbc:h2:${sys:carbon.home}/wso2/dashboard/database/metrics;AUTO_SERVER=TRUE'
+          username: wso2carbon
+          password: wso2carbon
+          driverClassName: org.h2.Driver
           maxPoolSize: 20
           idleTimeout: 60000
           connectionTestQuery: SELECT 1
@@ -307,13 +271,13 @@ wso2.datasources:
       definition:
         type: RDBMS
         configuration:
-          jdbcUrl: '<%= @permission_db_url %>'
-          username: <%= @permission_db_username %>
-          password: <%= @permission_db_password %>
-          driverClassName: <%= @permission_db_driver %>
+          jdbcUrl: '<%= @wso2_permissions_db_url %>'
+          username: <%= @wso2_permissions_db_username %>
+          password: <%= @wso2_permissions_db_password %>
+          driverClassName: <%= @wso2_permissions_db_driver %>
           maxPoolSize: 10
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @wso2_permissions_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -331,7 +295,25 @@ wso2.datasources:
           driverClassName: <%= @apim_analytics_db_driver %>
           maxPoolSize: 50
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @wso2_permissions_db_test_query %>
+          validationTimeout: 30000
+          isAutoCommit: false
+
+    #Main datasource used in API Manager
+    - name: AM_DB
+      description: Main datasource used by API Manager
+      jndiConfig:
+        name: jdbc/AM_DB
+      definition:
+        type: RDBMS
+        configuration:
+          jdbcUrl: "<%= @am_db_url %>"
+          username: <%= @am_db_username %>
+          password: <%= @am_db_password %>
+          driverClassName: <%= @am_db_driver %>
+          maxPoolSize: 10
+          idleTimeout: 60000
+          connectionTestQuery: <%= @am_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -357,14 +339,6 @@ wso2.business.rules.manager:
   username: '<%= @business_rules_manager_username %>'
   password: '<%= @business_rules_manager_password %>'
 
-wso2.status.dashboard:
-  pollingInterval: 5
-  metricsDatasourceName: 'WSO2_METRICS_DB'
-  dashboardDatasourceName: 'WSO2_STATUS_DASHBOARD_DB'
-  workerAccessCredentials:
-    username: '<%= @status_dashboard_username %>'
-    password: '<%= @status_dashboard_password %>'
-
 wso2.transport.http:
   transportProperties:
     - name: "server.bootstrap.socket.timeout"
@@ -376,9 +350,47 @@ wso2.transport.http:
 
   listenerConfigurations:
     - id: "default-https"
-      host: "<%= @default_host %>"
-      port: 9643
+      host: "<%= @hostname %>"
+      port: "<%= @transport_listner_config_port %>"
       scheme: https
-      keyStoreFile: "<%= @default_listener_keystore %>"
-      keyStorePassword: <%= @default_listener_keystore_password %>
+      keyStoreFile: "<%= @analytics_key_store_location %>"
+      keyStorePassword: <%= @key_store_key_password %>
       certPass: <%= @default_listener_keystore_cert_pass %>
+
+## Dashboard data provider authorization
+data.provider.configs:
+  authorizingClass: org.wso2.carbon.dashboards.core.DashboardDataProviderAuthorizer
+
+## Additional APIs that needs to be added to the server.
+## Should be provided as a key value pairs { API context path: Microservice implementation class }
+## The configured APIs will be available as https://{host}:{port}/analytics-dashboard/{API_context_path}
+additional.apis:
+  /apis/analytics/v1.0/apim: org.wso2.analytics.apim.rest.api.proxy.ApimApi
+
+## Authentication configuration
+auth.configs:
+  type: apim
+  ssoEnabled: true
+  properties:
+    adminScope: apim_analytics:admin_carbon.super
+    allScopes: apim_analytics:admin apim_analytics:product_manager apim_analytics:api_developer apim_analytics:app_developer apim_analytics:devops_engineer apim_analytics:analytics_viewer apim_analytics:everyone openid apim:api_view apim:subscribe
+    adminServiceBaseUrl: <%= @admin_service_url %>
+    adminUsername: <%= @admin_service_username %>
+    adminPassword: <%= @admin_service_password %>
+    kmDcrUrl: <%= @admin_service_url %>/client-registration/v0.15/register
+    kmTokenUrlForRedirection: <%= @admin_service_url %>:9443/oauth2
+    kmTokenUrl: <%= @admin_service_url %>/oauth2
+    kmUsername: <%= @keymanager_username %>
+    kmPassword: <%= @keymanager_password %>
+    portalAppContext: analytics-dashboard
+    businessRulesAppContext : business-rules
+    cacheTimeout: 900
+    baseUrl: https://localhost:9643
+    grantType: authorization_code
+    publisherUrl: <%= @admin_service_url %>
+    #storeUrl: <%= @admin_service_url %>
+
+wso2.dashboard:
+  roles:
+    creators:
+      - apim_analytics:admin_carbon.super
