--- a/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
+++ b/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
@@ -304,7 +304,8 @@ state.persistence:
   revisionsToKeep: <%= @state_persistence_revisions %>
   persistenceStore: org.wso2.carbon.streaming.integrator.core.persistence.FileSystemPersistenceStore
   config:
-    location: siddhi-app-persistence
+    datasource: PERSISTENCE_DB   # A datasource with this name should be defined in wso2.datasources namespace
+    table: PERSISTENCE_TABLE
 
   # Secure Vault Configuration
 wso2.securevault:
@@ -358,23 +359,6 @@ wso2.datasources:
           validationTimeout: 30000
           isAutoCommit: false
 
-    - name: Message_Tracing_DB
-      description: "The datasource used for message tracer to store span information."
-      jndiConfig:
-        name: jdbc/Message_Tracing_DB
-      definition:
-        type: RDBMS
-        configuration:
-          jdbcUrl: '<%= @message_tracing_db_url %>'
-          username: <%= @message_tracing_db_username %>
-          password: <%= @message_tracing_db_password %>
-          driverClassName: <%= @message_tracing_db_driver %>
-          maxPoolSize: 30
-          idleTimeout: 60000
-          connectionTestQuery: <%= @message_tracing_db_test_query %>
-          validationTimeout: 30000
-          isAutoCommit: false
-
     - name: GEO_LOCATION_DATA
       description: "The data source used for geo location database"
       jndiConfig:
@@ -408,40 +392,6 @@ wso2.datasources:
           validationTimeout: 30000
           isAutoCommit: false
 
-    #Main datasource used in API Manager
-    - name: AM_DB
-      description: Main datasource used by API Manager
-      jndiConfig:
-        name: jdbc/AM_DB
-      definition:
-        type: RDBMS
-        configuration:
-          jdbcUrl: "<%= @am_db_url %>"
-          username: <%= @am_db_username %>
-          password: <%= @am_db_password %>
-          driverClassName: <%= @am_db_driver %>
-          maxPoolSize: 10
-          idleTimeout: 60000
-          connectionTestQuery: <%= @am_test_query %>
-          validationTimeout: 30000
-          isAutoCommit: false
-
-    - name: WSO2AM_MGW_ANALYTICS_DB
-      description: "The datasource used for APIM MGW analytics data."
-      jndiConfig:
-        name: jdbc/WSO2AM_MGW_ANALYTICS_DB
-      definition:
-        type: RDBMS
-        configuration:
-          jdbcUrl: '<%= @wso2am_mgw_analytics_db_url %>'
-          username: <%= @wso2am_mgw_analytics_db_username %>
-          password: <%= @wso2am_mgw_analytics_db_password %>
-          driverClassName: <%= @wso2am_mgw_analytics_db_driver %>
-          maxPoolSize: 50
-          idleTimeout: 60000
-          connectionTestQuery: <%= @wso2am_mgw_analytics_db_test_query %>
-          validationTimeout: 30000
-          isAutoCommit: false
     -
       name: WSO2_CLUSTER_DB
       description: "The datasource used by cluster coordinators in HA deployment"
@@ -458,13 +408,34 @@ wso2.datasources:
           username: <%= @cluster_db_username %>
           validationTimeout: 30000
 
+#    -
+#      name: PERSISTENCE_DB
+#      description: "Datasource used for persistence"
+#      jndiConfig:
+#        name: jdbc/PERSISTENCE_DB
+#      definition:
+#        type: RDBMS
+#        configuration:
+#          connectionTestQuery: "SELECT 1"
+#          driverClassName: com.mysql.jdbc.Driver
+#          idleTimeout: 60000
+#          isAutoCommit: false
+#          jdbcUrl: "jdbc:h2:${sys:carbon.home}/wso2/${sys:wso2.runtime}/database/PERSISTENCE_DB;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000;AUTO_SERVER=TRUE"
+#          maxPoolSize: 10
+#          password: pass
+#          username: root
+#          validationTimeout: 30000
+
 siddhi:
+  # properties:
+  #  partitionById: true
+  #  shardId: 1
   refs:
     - ref:
         name: 'grpcSource'
         type: 'grpc'
         properties:
-          receiver.url : grpc://localhost:9806/org.wso2.grpc.EventService/consume
+          receiver.url : ggrpc://localhost:9806/org.wso2.analytics.mgw.grpc.service.AnalyticsSendService/sendAnalytics
   extensions:
     -
       extension:
@@ -486,21 +457,7 @@ siddhi:
           cacheSize: 10000
           isPersistInDatabase: true
           datasource: GEO_LOCATION_DATA
-    # Enable email config
-    # -
-    #   extension:
-    #     name: email
-    #     namespace: sink
-    #     properties:
-    #       username: user@domain
-    #       address: user@domain
-    #       password: sample_pass
-    #       host: The host name of the SMTP server.
-    #       port: The port that is used to create the connection.
-    #       auth: false
-    #       ssl.enable: false
-
-    #Enabling GRPC Service with an Extension
+   #Enabling GRPC Service with an Extension
     -
       extension:
         name: 'grpc'
