--- a/modules/apim_devportal/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_devportal/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -5,7 +5,7 @@ server_role="api-devportal"
 offset = "<%= @ports_offset %>"
 
 [user_store]
-type = "database"
+type = "database_unique_id"
 
 [super_admin]
 username = "<%= @admin_username %>"
@@ -97,3 +97,7 @@ display_deprecated_apis = false
 enable_comments = true
 enable_ratings = true
 enable_forum = true
+
+[[event_handler]]
+name="userPostSelfRegistration"
+subscriptions=["POST_ADD_USER"]
