--- a/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -5,7 +5,7 @@ server_role = "gateway-worker"
 offset = "<%= @ports_offset %>"
 
 [user_store]
-type = "database"
+type = "database_unique_id"
 
 [super_admin]
 username = "<%= @admin_username %>"
@@ -38,6 +38,9 @@ password = "<%= @trust_store_password %>"
 service_url = "<%= @key_manager_server_url %>"
 username= "$ref{super_admin.username}"
 password= "$ref{super_admin.password}"
+#pool.init_idle_capacity=50
+#pool.max_idle=100
+#custom_key_validation_handler="org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
 
 # Traffic Manager configurations
 [apim.throttling]
@@ -60,6 +63,8 @@ throttle_decision_endpoints = [<%= @throttle_decision_endpoints %>]
 traffic_manager_urls=[<%= url_group['traffic_manager_urls'] %>]
 traffic_manager_auth_urls=[<%= url_group['traffic_manager_auth_urls'] %>]
 <% end %>
+traffic_manager_urls=["tcp://tm2.local:9611"]
+traffic_manager_auth_urls=["ssl://tm2.local:9711"]
 
 [apim.analytics]
 enable = "<%= @analytics_enabled %>"
