--- a/modules/apim_km/templates/carbon-home/bin/wso2server.sh.erb
+++ b/modules/apim_km/templates/carbon-home/bin/wso2server.sh.erb
@@ -158,16 +158,27 @@ do
     elif [ "$c" = "--test" ] || [ "$c" = "-test" ] || [ "$c" = "test" ]; then
           CMD="test"
     elif [ "$c" = "--optimize" ] || [ "$c" = "-optimize" ] || [ "$c" = "optimize" ]; then
-          for profile in $*
-          do
-            case "$profile" in
-              *Dprofile=*)
-                cd $(dirname "$0")
-                sh profileSetup.sh $profile
-                echo "Starting the server..."
-                ;;
-            esac
-          done
+      for option in $*; do
+        if [ "$option" = "--skipConfigOptimization" ] || [ "$option" = "-skipConfigOptimization" ] ||
+        [ "$option" = "skipConfigOptimization" ]; then
+          passedSkipConfigOptimizationOption=true
+          echo "Passed skipConfigOptimization Option: $passedSkipConfigOptimizationOption"
+        fi
+      done
+
+      for profile in $*; do
+        case "$profile" in
+          *Dprofile=*)
+            cd $(dirname "$0")
+            if [ "$passedSkipConfigOptimizationOption" = true ]; then
+              sh profileSetup.sh $profile --skipConfigOptimization
+            else
+              sh profileSetup.sh $profile
+            fi
+            echo "Starting the server..."
+            ;;
+        esac
+      done
     else
         args="$args $c"
     fi
@@ -253,6 +264,8 @@ for t in "$CARBON_HOME"/lib/*.jar
 do
     CARBON_CLASSPATH="$CARBON_CLASSPATH":$t
 done
+
+
 
 # For Cygwin, switch paths to Windows format before running java
 if $cygwin; then
