Update apim_publisher module for 3.1.0

--- a/modules/apim_publisher/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_publisher/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -6,6 +6,7 @@ offset = "<%= @ports_offset %>"
 
 [user_store]
 type = "database"
+type = "database_unique_id"
 
 [super_admin]
 username = "<%= @admin_username %>"
