--- a/modules/apim_tm/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_tm/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -5,7 +5,7 @@ server_role = "traffic-manager"
 offset = "<%= @ports_offset %>"
 
 [user_store]
-type = "database"
+type = "database_unique_id"
 
 [super_admin]
 username = "<%= @admin_username %>"
