--- a/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
+++ b/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
@@ -435,7 +435,7 @@ siddhi:
         name: 'grpcSource'
         type: 'grpc'
         properties:
-          receiver.url : ggrpc://localhost:9806/org.wso2.analytics.mgw.grpc.service.AnalyticsSendService/sendAnalytics
+          receiver.url : grpc://localhost:9806/org.wso2.analytics.mgw.grpc.service.AnalyticsSendService/sendAnalytics
   extensions:
     -
       extension:
