--- a/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
+++ b/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
@@ -21,6 +21,8 @@ wso2.carbon:
   id: <%= @wso2_carbon_id %>
   # server name
   name: WSO2 API Manager Analytics Server
+    # enable/disable hostname verifier
+  hostnameVerificationEnabled: true
   # ports used by this server
   ports:
     # port offset
