--- a/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
+++ b/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
@@ -469,6 +469,13 @@ siddhi:
           trustStoreFile : ${sys:carbon.home}/resources/security/client-truststore.jks
           trustStorePassword : wso2carbon
           trustStoreAlgorithm : SunX509
+    # Provides the regular expression collection to parse the user-agent header
+    -
+      extension:
+        name: 'getUserAgentProperty'
+        namespace: 'env'
+        properties:
+          regexFilePath : ${sys:carbon.home}/conf/worker/regexes.yaml
 
   # Cluster Configuration
 cluster.config:
@@ -541,3 +548,4 @@ deployment.config:
       password: <%= manager['password'] %>
     <% end %>
 <% end %>
+
