--- a/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
+++ b/modules/apim_analytics_dashboard/templates/carbon-home/conf/dashboard/deployment.yaml.erb
@@ -365,7 +365,7 @@ wso2.transport.http:
 
 ## Dashboard data provider authorization
 data.provider.configs:
-  authorizingClass: org.wso2.carbon.dashboards.core.DashboardDataProviderAuthorizer
+  authorizingClass: org.wso2.analytics.apim.dashboards.core.data.provider.Authorizer
 
 ## Additional APIs that needs to be added to the server.
 ## Should be provided as a key value pairs { API context path: Microservice implementation class }
@@ -383,11 +383,10 @@ auth.configs:
   ssoEnabled: true
   properties:
     adminScope: apim_analytics:admin_carbon.super
-    allScopes: apim_analytics:admin apim_analytics:product_manager apim_analytics:api_developer apim_analytics:app_developer apim_analytics:devops_engineer apim_analytics:analytics_viewer apim_analytics:everyone openid apim:api_view apim:subscribe
-    adminServiceBaseUrl: <%= @admin_service_url %>
+    allScopes: apim_analytics:admin openid apim:api_view apim:subscribe apim_analytics:monitoring_dashboard:own apim_analytics:monitoring_dashboard:edit apim_analytics:monitoring_dashboard:view apim_analytics:business_analytics:own apim_analytics:business_analytics:edit apim_analytics:business_analytics:view apim_analytics:api_analytics:own apim_analytics:api_analytics:edit apim_analytics:api_analytics:view apim_analytics:application_analytics:own apim_analytics:application_analytics:edit apim_analytics:application_analytics:view
     adminUsername: <%= @admin_service_username %>
     adminPassword: <%= @admin_service_password %>
-    kmDcrUrl: <%= @admin_service_url %>/client-registration/v0.16/register
+    kmDcrUrl: <%= @admin_service_url %>/client-registration/v0.17/register
     kmTokenUrlForRedirection: <%= @admin_service_url %>:9443/oauth2
     kmTokenUrl: <%= @admin_service_url %>/oauth2
     kmUsername: <%= @keymanager_username %>
@@ -398,9 +397,7 @@ auth.configs:
     baseUrl: https://localhost:9643
     grantType: authorization_code
     publisherUrl: <%= @admin_service_url %>
-    devPortalUrl: <%= @admin_service_url %>
     externalLogoutUrl: <%= @admin_service_url %>/oidc/logout
-    #storeUrl: <%= @admin_service_url %>
 
 wso2.dashboard:
   roles:
