--- a/modules/apim_control_plane/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_control_plane/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -1,17 +1,17 @@
 [server]
 hostname = "<%= @hostname %>"
-node_ip = "127.0.0.1"
-server_role = "api-publisher"
+base_path = "${carbon.protocol}://${carbon.host}:${carbon.management.port}"
+#discard_empty_caches = false
+server_role = "control-plane"
 offset = "<%= @ports_offset %>"
-
-[user_store]
-type = "database"
-type = "database_unique_id"
 
 [super_admin]
 username = "<%= @admin_username %>"
 password = "<%= @admin_password %>"
 create_admin_account = true
+
+[user_store]
+type = "database_unique_id"
 
 [database.apim_db]
 type = "<%= @wso2am_db_type %>"
@@ -36,10 +36,19 @@ password =  "<%= @key_store_password %>"
 alias =  "<%= @key_store_key_alias %>"
 key_password =  "<%= @key_store_key_password %>"
 
-[truststore]
-file_name = "<%= @trust_store_location %>"
-type = "JKS"
-password = "<%= @trust_store_password %>"
+#[keystore.primary]
+#file_name =  "wso2carbon.jks"
+#type =  "JKS"
+#password =  "wso2carbon"
+#alias =  "wso2carbon"
+#key_password =  "wso2carbon"
+
+#[keystore.internal]
+#file_name =  "wso2carbon.jks"
+#type =  "JKS"
+#password =  "wso2carbon"
+#alias =  "wso2carbon"
+#key_password =  "wso2carbon"
 
 <% @gateway_environments.each do |environment| %>
 [[apim.gateway.environment]]
@@ -47,56 +56,160 @@ name = "<%= environment['name'] %>"
 type = "<%= environment['type'] %>"
 display_in_api_console = true
 description = "<%= environment['description'] %>"
+show_as_token_endpoint_url = true
 service_url = "<%= environment['server_url'] %>"
 username= "${admin.username}"
 password= "${admin.password}"
+ws_endpoint = "<%= environment['ws_endpoint'] %>"
+wss_endpoint = "<%= environment['wss_endpoint'] %>"
+http_endpoint = "<%= environment['http_endpoint'] %>"
+https_endpoint = "<%= environment['https_endpoint'] %>"
+websub_event_receiver_http_endpoint = "<%= environment['websub_event_receiver_http_endpoint'] %>"
+websub_event_receiver_https_endpoint = "<%= environment['websub_event_receiver_https_endpoint'] %>"
 <% end %>
 
-[apim.analytics]
-enable = "<%= @analytics_enabled %>"
-receiver_username = "<%= @stream_processor_username %>"
-receiver_password = "<%= @stream_processor_password %>"
-store_api_url = "<%= @stream_processor_rest_api_url %>"
-store_api_username = "<%= @stream_processor_rest_api_username %>"
-store_api_password = "<%= @stream_processor_rest_api_password %>"
+#[apim.cache.gateway_token]
+#enable = true
+#expiry_time = "900s"
 
-<% @analytics_url_group.each do |url_group| %>
-[[apim.analytics.url_group]]
-analytics_url =[<%= url_group['analytics_urls'] %>]
-analytics_auth_url =[<%= url_group['analytics_auth_urls'] %>]
-<% end %>
+#[apim.cache.resource]
+#enable = true
+#expiry_time = "900s"
 
-# Traffic Manager configurations
+#[apim.cache.km_token]
+#enable = false
+#expiry_time = "15m"
+
+#[apim.cache.recent_apis]
+#enable = false
+
+#[apim.cache.scopes]
+#enable = true
+
+#[apim.cache.publisher_roles]
+#enable = true
+
+#[apim.cache.jwt_claim]
+#enable = true
+#expiry_time = "15m"
+
+#[apim.cache.tags]
+#expiry_time = "2m"
+
+#[apim.key_manager]
+#service_url = "https://localhost:${mgt.transport.https.port}/services/"
+#username = "$ref{super_admin.username}"
+#password = "$ref{super_admin.password}"
+#pool.init_idle_capacity = 50
+#pool.max_idle = 100
+#key_validation_handler_type = "default"
+#key_validation_handler_type = "custom"
+#key_validation_handler_impl = "org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
+
+#[apim.oauth_config]
+#enable_outbound_auth_header = false
+#auth_header = "Authorization"
+#revoke_endpoint = "https://localhost:${https.nio.port}/revoke"
+#enable_token_encryption = false
+#enable_token_hashing = false
+
+#[apim.devportal]
+#url = "https://localhost:${mgt.transport.https.port}/devportal"
+#enable_application_sharing = false
+#if application_sharing_type, application_sharing_impl both defined priority goes to application_sharing_impl
+#application_sharing_type = "default" #changed type, saml, default #todo: check the new config for rest api
+#application_sharing_impl = "org.wso2.carbon.apimgt.impl.SAMLGroupIDExtractorImpl"
+#display_multiple_versions = false
+#display_deprecated_apis = false
+#enable_comments = true
+#enable_ratings = true
+#enable_forum = true
+#enable_anonymous_mode=true
+#enable_cross_tenant_subscriptions = true
+#default_reserved_username = "apim_reserved_user"
+
+[apim.cors]
+allow_origins = "*"
+allow_methods = ["GET","PUT","POST","DELETE","PATCH","OPTIONS"]
+allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction","apikey","Internal-Key"]
+allow_credentials = false
+
 [apim.throttling]
-enable_policy_deploy = "true"
-service_url = "<%= @throttle_config_policy_deployer_url %>"
-receiver_url = "<%= @traffic_manager_receiver_url %>"
-receiver_auth_url = "<%= @traffic_manager_auth_url %>"
-username= "$ref{super_admin.username}"
-password= "$ref{super_admin.password}"
+#enable_data_publishing = true
+#enable_policy_deploy = true
+#enable_blacklist_condition = true
+#enable_persistence = true
+service_url = "<%= @throttle_service_url %>"
+throttle_decision_endpoints = [ <%= @throttle_decision_endpoints %> ]
 
 <% @throttling_url_group.each do |url_group| %>
 [[apim.throttling.url_group]]
 traffic_manager_urls=[<%= url_group['traffic_manager_urls'] %>]
 traffic_manager_auth_urls=[<%= url_group['traffic_manager_auth_urls'] %>]
+type = "loadbalance"
 <% end %>
 
-[apim.cache.scopes]
-enable = true
+#[apim.workflow]
+#enable = false
+#service_url = "https://localhost:9445/bpmn"
+#username = "$ref{super_admin.username}"
+#password = "$ref{super_admin.password}"
+#callback_endpoint = "https://localhost:${mgt.transport.https.port}/api/am/admin/v0.17/workflows/update-workflow-status"
+#token_endpoint = "https://localhost:${https.nio.port}/token"
+#client_registration_endpoint = "https://localhost:${mgt.transport.https.port}/client-registration/v0.17/register"
+#client_registration_username = "$ref{super_admin.username}"
+#client_registration_password = "$ref{super_admin.password}"
 
-[apim.cache.publisher_roles] #check the usage and move to dev role
-enable = true
+#data bridge config
+#[transport.receiver]
+#type = "binary"
+#worker_threads = 10
+#session_timeout = "30m"
+#keystore.file_name = "$ref{keystore.tls.file_name}"
+#keystore.password = "$ref{keystore.tls.password}"
+#tcp_port = 9611
+#ssl_port = 9711
+#ssl_receiver_thread_pool_size = 100
+#tcp_receiver_thread_pool_size = 100
+#ssl_enabled_protocols = ["TLSv1","TLSv1.1","TLSv1.2"]
+#ciphers = ["SSL_RSA_WITH_RC4_128_MD5","SSL_RSA_WITH_RC4_128_SHA"]
 
-[apim.devportal]
-url = "<%= @api_devportal_url %>"
+#[apim.notification]
+#from_address = "APIM.com"
+#username = "APIM"
+#password = "APIM+123"
+#hostname = "localhost"
+#port = 3025
+#enable_start_tls = false
+#enable_authentication = true
 
-[apim.workflow]
-enable = "<%= @workflow_enable %>"
-service_url = "<%= @workflow_service_url %>"
-username = "$ref{super_admin.username}"
-password = "$ref{super_admin.password}"
-callback_endpoint = "<%= @workflow_callback_endpoint %>"
-token_endpoint = "<%= @workflow_token_endpoint %>"
-client_registration_endpoint = "<%= @workflow_client_registration_endpoint %>"
-client_registration_username = "$ref{super_admin.username}"
-client_registration_password = "$ref{super_admin.password}"
+#[apim.token.revocation]
+#notifier_impl = "org.wso2.carbon.apimgt.keymgt.events.TokenRevocationNotifierImpl"
+#enable_realtime_notifier = true
+#realtime_notifier.ttl = 5000
+#enable_persistent_notifier = true
+#persistent_notifier.hostname = "https://localhost:2379/v2/keys/jti/"
+#persistent_notifier.ttl = 5000
+#persistent_notifier.username = "root"
+#persistent_notifier.password = "root"
+
+[[event_handler]]
+name="userPostSelfRegistration"
+subscriptions=["POST_ADD_USER"]
+
+[service_provider]
+sp_name_regex = "^[\\sa-zA-Z0-9._-]*$"
+
+[database.local]
+url = "jdbc:h2:./repository/database/WSO2CARBON_DB;DB_CLOSE_ON_EXIT=FALSE"
+
+[[event_listener]]
+id = "token_revocation"
+type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
+name = "org.wso2.is.notification.ApimOauthEventInterceptor"
+order = 1
+[event_listener.properties]
+notification_endpoint = "<%= @event_listener_notification_endpoint %>"
+username = "${admin.username}"
+password = "${admin.password}"
+'header.X-WSO2-KEY-MANAGER' = "default"
