Refactor code for APIM 4.0.0

--- a/modules/apim/templates/carbon-home/bin/api-manager.sh.erb
+++ b/modules/apim/templates/carbon-home/bin/api-manager.sh.erb
@@ -17,7 +17,7 @@
 # ----------------------------------------------------------------------------
 # Main Script for the WSO2 Carbon Server
 #
-# Environment Variable Prequisites
+# Environment Variable Prerequisites
 #
 #   CARBON_HOME   Home of WSO2 Carbon installation. If not set I will  try
 #                   to figure it out.
