--- a/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -16,6 +16,7 @@ type = "<%= @wso2shared_db_type %>"
 url = "<%= @wso2shared_db_url %>"
 username = "<%= @wso2shared_db_username %>"
 password = "<%= @wso2shared_db_password %>"
+
 [database.shared_db.pool_options]
 validationQuery = "<%= @wso2shared_db_validation_query %>"
 
@@ -51,16 +52,19 @@ signing_algorithm = "SHA256withRSA"
 #enable_user_claims = true
 #claims_extractor_impl = "org.wso2.carbon.apimgt.impl.token.DefaultClaimsRetriever"
 
+[apim.sync_runtime_artifacts.gateway]
+gateway_labels =["Default"]
+
 # Traffic Manager configurations
 [apim.throttling]
 username= "$ref{super_admin.username}"
 password= "$ref{super_admin.password}"
 service_url = "<%= @throttle_service_url %>"
 throttle_decision_endpoints = [<%= @throttle_decision_endpoints %>]
-# enable_unlimited_tier = true
-# enable_header_based_throttling = false
-# enable_jwt_claim_based_throttling = false
-# enable_query_param_based_throttling = false
+#enable_unlimited_tier = true
+#enable_header_based_throttling = false
+#enable_jwt_claim_based_throttling = false
+#enable_query_param_based_throttling = false
 
 <% @throttling_url_group.each do |url_group| %>
 [[apim.throttling.url_group]]
@@ -73,6 +77,7 @@ enable = <%= @analytics_enabled %>
 config_endpoint = "<%= @analytics_config_endpoint %>"
 auth_token = "<%= @analytics_auth_token %>"
 
+# Caches
 [apim.cache.gateway_token]
 enable = true
 expiry_time = 15
