Parameteriz config params

--- a/modules/apim_control_plane/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_control_plane/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -56,7 +56,7 @@ key_password =  "<%= @key_store_key_password %>"
 [[apim.gateway.environment]]
 name = "<%= environment['name'] %>"
 type = "<%= environment['type'] %>"
-provider = "wso2"
+provider = "<%= environment['provider'] %>"
 display_in_api_console = true
 description = "<%= environment['description'] %>"
 show_as_token_endpoint_url = true
