--- a/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -59,7 +59,7 @@ key_password =  "<%= @key_store_key_password %>"
 [[apim.gateway.environment]]
 name = "<%= environment['name'] %>"
 type = "<%= environment['type'] %>"
-provider = "wso2"
+provider = "<%= environment['provider'] %>"
 display_in_api_console = true
 description = "<%= environment['description'] %>"
 show_as_token_endpoint_url = true
@@ -260,6 +260,6 @@ password = "${admin.password}"
 'header.X-WSO2-KEY-MANAGER' = "default"
 
 [oauth.grant_type.token_exchange]
-enable = true
-allow_refresh_tokens = true
-iat_validity_period = "1h"
+enable = "<%= @token_exchange_enable %>"
+allow_refresh_tokens = "<%= @token_exchange_allow_refresh_tokens %>"
+iat_validity_period = "<%= @token_exchange_iat_validity_period %>"
