--- a/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -74,6 +74,11 @@ enable = <%= @analytics_enabled %>
 config_endpoint = "<%= @analytics_config_endpoint %>"
 auth_token = "<%= @analytics_auth_token %>"
 
+[apim.ai]
+enable = <%= @ai_enabled %>
+token = <%= @ai_token %>
+endpoint = <%= @ai_endpoint %>
+
 # Caches
 [apim.cache.gateway_token]
 enable = true
