--- a/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -59,6 +59,7 @@ key_password =  "<%= @key_store_key_password %>"
 [[apim.gateway.environment]]
 name = "<%= environment['name'] %>"
 type = "<%= environment['type'] %>"
+gateway_type = "<%= environment['gateway_type'] %>"
 provider = "<%= environment['provider'] %>"
 display_in_api_console = true
 description = "<%= environment['description'] %>"
@@ -109,6 +110,11 @@ gateway_labels =<%= @gateway_labels %>
 enable = <%= @analytics_enabled %>
 config_endpoint = "<%= @analytics_config_endpoint %>"
 auth_token = "<%= @analytics_auth_token %>"
+
+[apim.ai]
+enable = <%= @ai_enabled %>
+token = <%= @ai_token %>
+endpoint = <%= @ai_endpoint %>
 
 [apim.key_manager]
 enable_apikey_subscription_validation = true
